Подправил DTO и добавил Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   authorization-microservice-db:
     image: postgres:latest
-    container_name: authorization-microservice-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -10,6 +9,19 @@ services:
       - "5433:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
-
+    networks:
+      - microservices-network
+  authorization-microservice:
+    build: .
+    depends_on:
+      - authorization-microservice-db
+    ports:
+      - "8081:8080"
+    networks:
+      - microservices-network
 volumes:
   db-data:
+
+networks:
+  microservices-network:
+    external: true
