--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/authorization_db
+#    Для запуска в docker
+    url: jdbc:postgresql://authorization-microservice-db:5432/authorization_db
+#    Для запуска через ide
+#    url: jdbc:postgresql://localhost:5433/authorization_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -9,7 +12,10 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
-    url: jdbc:postgresql://localhost:5433/authorization_db
+#    Для запуска в docker
+    url: jdbc:postgresql://authorization-microservice-db:5432/authorization_db
+#    Для запуска через ide
+#    url: jdbc:postgresql://localhost:5433/authorization_db
     user: postgres
     password: postgres
 
@@ -20,3 +26,4 @@ jwt:
   public:
     key:
       path: keys/publicLink2U.pem
+
