--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,3 @@
 spring:
-  datasource:
-#    Для запуска в docker
-    url: jdbc:postgresql://authorization-microservice-db:5432/authorization_db
-#    Для запуска через ide
-#    url: jdbc:postgresql://localhost:5433/authorization_db
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-#    Для запуска в docker
-    url: jdbc:postgresql://authorization-microservice-db:5432/authorization_db
-#    Для запуска через ide
-#    url: jdbc:postgresql://localhost:5433/authorization_db
-    user: postgres
-    password: postgres
-
-jwt:
-  private:
-    key:
-      path: keys/privateLink2U.pem
-  public:
-    key:
-      path: keys/publicLink2U.pem
-
+  profiles:
+    active: dev
